# pygenerals

./: .gitignore  .pdm-python  app.py  config.toml  generate_maps.html  generate_maps.py  prompt.txt  pyproject.toml  pyproject.toml.bk  requirements.txt  run.py
app/: game.py  routes.py
maps/: 1.map  2.map  3.map
server/maps/: 01.toml
src/app/: __init__.py
src/maps/: 1.map
static/: index.html  script.js  style.css
tests/: test.py
