[project]
name = "pygenerals"
version = "0.1.0"
description = "A python project of generals.io"
authors = [{ name = "jasonxue", email = "jason@xuechunxi.com" }]
dependencies = ["Flask", "Flask-SocketIO", "eventlet", "toml"]
requires-python = "==3.12.9"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
